# cudalern

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
include/cudalern/ABI/: allocator.hpp  kernel.cuh  memory.hpp  stream.hpp  wrappers.hpp
include/cudalern/Containers/: NdArray.hpp
include/cudalern/Core/: concepts.hpp  constants.hpp  core.cuh  core.hpp  device.hpp  err.hpp  kernel.cuh
src/: CMakeLists.txt
src/ABI/: kernel.cu  stream.cpp
src/Core/: device.cpp
src/cudalern/: core.cu  kernel.cu
src/tests/: CMakeLists.txt  main.cpp  test_ndarray.cpp
